<?xml version="1.0" encoding="utf-8"?>
<resources>	    
    <string name="app_name">Dolphin</string>
    <string name="title">Dolphin</string>
    
    <!-- Facebook APP ID http://developers.facebook.com/android/ -->
    <string name="app_id">320473678069992</string>
    
    <!-- Google API Key https://code.google.com/apis/console/ Services "Google Maps Android API v2", "Google Play Android Developer API" -->
    <string name="google_maps_key">AIzaSyCxxNY1IbtqKl_8pFjVnJ3HZwSbF-i9IQU</string> <!-- release -->
    <!-- <string name="google_maps_key">AIzaSyB9xakFe332Pfs0CL5OSQZwbI9LCJ__T_k</string> --> <!-- debug -->
    
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="access_denied">Access denied</string>    
    <string name="loading">Working...</string>
    <string name="exception">Exception</string>
    <string name="exception_out_of_memory">There is not enough free memory for the operation</string>
    <string name="x_yo">%s y/o</string>
    <string name="about_text">Dolphin Mobile App for Android  v.%s
&lt;br /&gt;&lt;br /&gt;
Connect to community sites powered by BoonEx Dolphin and 
use them from your Android device. 
&lt;br /&gt;&lt;br /&gt;
You need to be registered at the site you\'re adding. To add your 
favorite community, tap "Add Site" and enter full site URL and 
your account details. Once the site is added you can access it 
from the app homepage. You can add and use multiple 
Dolphin-based sites.
&lt;br /&gt;&lt;br /&gt;
For example, try joining &lt;a href="http://demo.boonex.com"&gt;demo.boonex.com&lt;/a&gt; and use it via this app.
&lt;br /&gt;&lt;br /&gt;
Create your own community site and have your own mobile 
app using &lt;a href="http://www.boonex.com/dolphin"&gt;Dolphin&lt;/a&gt; - open source social networking platform 
and mobile apps package from &lt;a href="http://www.boonex.com/"&gt;BoonEx&lt;/a&gt;.
</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_settings">Settings</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="dialog_confirm_title">Confirm</string>
    <string name="dialog_confirm_msg">Are you sure?</string>
    <string name="empty">Empty</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_picker_user">Select user</string>
    <string name="title_picker_country">Select country</string>
    <string name="title_about">About Dolphin Mobile App</string>
    <string name="title_friend_requests">Friend requests</string>
    <string name="title_friends">Friends</string>
    <string name="title_friends_home">Friends</string>
    <string name="title_location">Location</string>
    <string name="title_mail_compose">Compose Message</string>
    <string name="title_mail_home">Messages Home</string>
    <string name="title_mail_message">Message</string>
    <string name="title_mail_messages">Messages</string>
    <string name="title_media_add">Add File</string>
    <string name="title_image_albums">Image Albums</string>
    <string name="title_image_files">Images</string>
    <string name="title_image_gallery"></string>      
    <string name="title_sound_albums">Sound Albums</string>
    <string name="title_sound_files">Sounds</string>
    <string name="title_video_albums">Video Albums</string>
    <string name="title_video_files">Videos</string>
    <string name="title_profile_info">Profile Info</string>
    <string name="title_search_home">Search Profiles</string>
    <string name="title_search_keyword">Search By Keyword</string>
    <string name="title_search_location">Search By Location</string>
    <string name="title_search_near_me">Search Near Me</string>
    <string name="title_search_results">Search Results</string>
    <string name="title_status_message">Status Message</string>
    <string name="location_acquiring_current">Acquiring current location...</string>
    <string name="location_undefined">Location is undefined</string>
    <string name="location_not_available">Your current location is not available</string>
    <string name="location_settings_title">Location Settings</string>
    <string name="location_settings_msg">All location providers are disabled in settings. Do you want to go to settings menu?</string>            
    <string name="login_site_url">Site URL:</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_remember_password">Remember Password:</string>
    <string name="login_add">Add</string>
    <string name="login_delete_site">Delete Site</string>
    <string name="main_no_sites">Please add at least one Dolphin site</string>
    <string name="main_add_site">Add a Site</string>
    <string name="main_about">About</string>
    <string name="home_logout">Logout</string>
    <string name="msg_login_incorrect">Login or password is incorrect</string>
    <string name="msg_url_incorrect">Site URL is incorrect</string>
    <string name="menu_item_format">%1$1s (%2$1s)</string>
    <string name="menu_refresh">Refresh</string>
    <string name="status_message_menu">Status</string>
    <string name="status_message">Status Message:</string>
    <string name="status_message_update">Update</string>
    <string name="location_update">Set Current Location</string>
    <string name="location_menu">Location</string>
    <string name="location_acquiring">Acquiring current location...</string>    
    <string name="mail_menu">Messages</string>
    <string name="mail_menu_num">Messages (%s)</string>
    <string name="mail_menu_inbox">Inbox</string>
    <string name="mail_menu_inbox_num">Inbox (%s)</string>
    <string name="mail_menu_sent">Sent</string>
    <string name="mail_menu_compose">Compose</string>
    <string name="mail_compose_recipient">Recipient</string>
    <string name="mail_compose_subject">Subject</string>
    <string name="mail_compose_text">Text</string>
    <string name="mail_compose_send">Send</string>
    <string name="mail_compose_select_user">Select</string>
    <string name="mail_compose_options_me">Send copy to me</string>
    <string name="mail_compose_options_recipient">Send copy to recipient</string>
    <string name="mail_compose_options_both">Send copy to both</string>
    <string name="mail_reply">Reply</string>
    <string name="mail_new">NEW</string>
    <string name="mail_error">ERROR</string>
    <string name="mail_success">SUCCESS</string>    
    <string name="mail_msg_send_failed">Message send failed</string>
    <string name="mail_wait_before_sendin_another_msg">You have to wait before sending another message</string>
    <string name="mail_you_are_blocked">You are being blocked by this recipient</string>
    <string name="mail_recipient_is_inactive">Recipient profile is not activated</string>
    <string name="mail_unknown_recipient">Unknown recipient</string>
    <string name="mail_membership_dont_allow">Your membership doesn\'t allow you to send messages</string>    
    <string name="mail_msg_successfully_sent">Message successfully sent</string>
    <string name="mail_form_error">Recipient, subject or text is empty</string>
    <string name="mail_from_x">From: %s</string>
    <string name="mail_to_x">To: %s</string>
    <string name="friends_menu">Friends</string>    
    <string name="friends_requests_menu">Friend Requests</string>
    <string name="friends_requests_menu_num">Friend Requests (%s)</string>
    <string name="friends_delete">Delete</string>
    <string name="friends_approve">Approve</string>
    <string name="friends_reject">Reject</string>      
    <string name="friends_view_profile">View</string>
    <string name="friends_add_friend">Add Friend</string>
    <string name="images_menu">Images</string>
    <string name="media_album_name_num">%1$1s (%2$1s)</string>
    <string name="media_files_delete">Delete</string>
    <string name="media_files_view">View</string>
    <string name="media_images_gallery_next">Next</string>
    <string name="media_images_gallery_prev">Prev</string>
    <string name="media_from_camera">Camera</string>
    <string name="media_from_gallery">Gallery</string>
    <string name="media_file">File</string>
    <string name="media_caption_title">Title</string>
    <string name="media_caption_tags">Tags</string>
    <string name="media_caption_desc">Description</string>
    <string name="media_submit">Submit</string>
    <string name="media_activity_canceled">Activity canceled</string>
    <string name="media_file_selected">File was successfully selected</string>
    <string name="media_form_error">Title is empty or file is not selected</string>
    <string name="media_upload_failed">Upload failed</string>
    <string name="media_popup_error_title">ERROR</string>
    <string name="media_upload_success_pending_conversion">File was uploaded, please wait until it is converted</string>
    <string name="media_error_from_camera_or_gallery">Sorry, file retrieving failed</string>
    <string name="media_error_file_too_big">File is too big to fit into memory, please try smaller file</string>
    <string name="media_images_gallery_set_as_avatar">Set as avatar</string>    
    <string name="media_images_gallery_set_as_avatar_ok">Avatar was set</string>
    <string name="media_images_gallery_set_as_avatar_fail">Avatar set failed</string>    
    <string name="videos_menu">Videos</string>    
    <string name="profile_info_menu">Info</string>
    <string name="profile_info_contact">Contact</string>    
    <string name="sounds_menu">Sounds</string>    
    <string name="search_menu">Search</string>
    <string name="search_keyword">Search By Keyword</string>
    <string name="search_location">Search By Location</string>
    <string name="search_near_me">Search Near Me</string>
    <string name="search_keyword_row_caption">Keyword:</string>
    <string name="search_online_only_row_caption">Online Only:</string>
    <string name="search_with_photos_only_row_caption">With Photos Only:</string>
    <string name="search_country_row_caption">Country:</string>
    <string name="search_city_row_caption">City:</string>
    <string name="search_select_country">Select</string>
    <string name="search_submit">Search</string>
    <string name="search_prev">Prev</string>
    <string name="search_next">Next</string>
    <string name="search_country_empty">Please specify country at least</string>    
</resources>
