<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" style="@style/OOScreen">
<LinearLayout 
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
<LinearLayout style="@style/OOUniContWholePage">	
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/MyDefaultTextAppearance"
		android:text="@string/search_country_row_caption" />

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="1">
    	
	<TableRow>

		<EditText android:id="@+id/country"
			android:singleLine="true" 
			android:enabled="false"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_column="1" />

		<Button android:id="@+id/search_select_country" 
	  		android:text="@string/search_select_country"	  		
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</TableRow>
	
	</TableLayout>


	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/MyDefaultTextAppearance"
		android:text="@string/search_city_row_caption" />
	<EditText android:id="@+id/city"
		android:singleLine="true" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:textAppearance="@style/MyDefaultTextAppearance" 
		android:text="@string/search_online_only_row_caption" />
	<CheckBox android:id="@+id/online_only"		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />


	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/MyDefaultTextAppearance"
		android:text="@string/search_with_photos_only_row_caption" />
	<CheckBox android:id="@+id/with_photos_only"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />


	<Button android:id="@+id/submit" android:text="@string/search_submit" style="@style/OOSubmitBtn" />


</LinearLayout>
</LinearLayout>
</ScrollView>